--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/portfolio/me.JPG" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/portfolio/me.JPG" alt="" class="img-fluid">
         <h1 class="text-light"><a href="index.html">stc0210</a></h1>
         <div class="social-links mt-3 text-center">
           
