--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
         <h1 class="text-light"><a href="index.html">stc0210</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://stc0210.github.io/" class="web" target="_blank">
-            <i class="fa-solid fa-earth-americas"></i></a>
+          <i class="fa-solid fa-earth-americas"></i></a>
+
           <a href="https://github.com/stc0210" class="github" target="_blank"><i class="bx bxl-github"></i></a>
-          <a href="#" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+
+          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+
+          <a href="https://medium.com/@stc0210" class="medium" target="_blank"><i class="bx bxl-medium"></i></a>
         </div>
       </div>
 
@@ -97,9 +101,14 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            Invigorated by the value sowed through technology, I pivoted from the built environment industry to software engineering to pursue the dream of turning visions into realities.
+            Hi! This is me stc0210, welcome to my portfolio website, I appreciate your visit and attention. <br><br>
 
-            I seek full stack growth and the opportunity to value-add to organizations that embed empathy, diversity, inclusivity and best practices in their culture.
+            I am a front-end engineer from Taiwan who strive to grasp the main technical trend and always work  efficiently and effectively!  <br><br>
+
+            When it comes to work, my attitude is always passionate and solution-oriented. 
+            I love communicate with different people at work, I believe that swapping different opinion and knowledge is the best way to innovation and improvement. <br><br>
+
+            If you have any questions about my work, or if you want to know more about me, please don’t hesitate to contact me! 
 
           </p>
         </div>
@@ -187,9 +196,9 @@
     <section id="resume" class="resume">
       <div class="container">
 
-        <div class="section-title">
+        <div class="section-title section-title-resume">
           <h2>Resume</h2>
-          <!-- <p></p> -->
+        
         </div>
 
         <div class="row">
@@ -232,7 +241,7 @@
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
-        <div class="section-title">
+        <div class="section-title section-title-portfolio">
           <h2>Portfolio</h2>
           <p></p>
         </div>
