--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+    <!-- google font -->
+    <link href='https://fonts.googleapis.com/css?family=Reenie Beanie' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
+
   <!-- =======================================================
   * Template Name: iPortfolio - v3.9.1
   * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
@@ -209,9 +213,9 @@
               <h4>Bachelor of Arts</h4>
               <h5>2015 - 2019</h5>
               <p><em>National Cheng Kung University, Tainan</em></p>
-              <p></p>
             </div>
           </div>
+          
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
