--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
 
           <a href="https://medium.com/@stc0210" class="medium" target="_blank"><i class="bx bxl-medium"></i></a>
+          
+          <a href = "mailto: chentanting@gmail.com" class="email" target="_blank"><i class='bx bx-envelope' ></i></a>
         </div>
       </div>
 
