--- a/index.html
+++ b/index.html
@@ -311,7 +311,40 @@
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer>
+  <!-- End  Footer -->
+
+    <!-- flower petal animation -->
+
+    <div id="flowerpetal_container">
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+      <div class="flowerpetal"></div>
+  </div>
+    <!-- End flower petal animation -->
+
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
