--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                   <span class="badge badge-primary"><i class="fa-brands fa-slack"></i> Slack</span>
 
                   <span class="badge badge-primary"><i class="fa-brands fa-figma"></i> Figma</span>
+                  <span class="badge badge-primary"><i class="fa-brands fa-git-alt"></i> Git</span>
 
 
               </div>
