--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                   
                   <span class="badge badge-primary"><i class="fa-brands fa-microsoft"></i> Office365</span>
                   <span class="badge badge-primary"><i class="fa-brands fa-slack"></i> Slack</span>
-
+                  <span class="badge badge-primary"><i class="devicon-trello-plain"></i> Trello </span>
                   <span class="badge badge-primary"><i class="fa-brands fa-figma"></i> Figma</span>
                   <span class="badge badge-primary"><i class="fa-brands fa-git-alt"></i> Git</span>
 
