--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
+          <h2>About!!</h2>
           <p>
             Hi! This is me stc0210, welcome to my portfolio website, I appreciate your visit and attention. <br><br>
 
@@ -145,9 +145,9 @@
         <div class="col-lg-6">
           <h3> Frontend Stack </h3>
           <div class="progress-wrap">
-            
-
-            <span class="badge badge-primary"><i class="devicon-react-original"></i> ReactJS</span>
+            <span class="badge badge-primary"><i class="devicon-react-original"></i> React </span>
+            <span class="badge badge-primary"><i class="devicon-vuejs-plain"></i> Vue.js </span>
+            <span class="badge badge-primary"><i class="devicon-nuxtjs-plain"></i> Nuxt.js </span>
             <span class="badge badge-primary"><i class="fa-brands fa-html5"></i> HTML</span>
             <span class="badge badge-primary"><i class="fa fa-css3"></i> CSS</span>
             <span class="badge badge-primary"><i class="fa-brands fa-bootstrap"></i> Bootstrap</span>
