--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
 
-          <a href="https://medium.com/@stc0210" class="medium" target="_blank"><i class="bx bxl-medium"></i></a>
+          <!-- <a href="https://medium.com/@stc0210" class="medium" target="_blank"><i class="bx bxl-medium"></i></a> -->
           
           <a href = "mailto: chentanting@gmail.com" class="email" target="_blank"><i class='bx bx-envelope' ></i></a>
         </div>
@@ -105,7 +105,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About!!</h2>
+          <h2>About</h2>
           <p>
             Hi! This is me stc0210, welcome to my portfolio website, I appreciate your visit and attention. <br><br>
 
