--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="resume-item">
               <h4>Front end Developer</h4>
               <h5>2022 - Present</h5>
-              <p><em>Da’an District, Taiepi, TW </em></p>
+              <p><em>Da’an District, Taipei, TW </em></p>
               <ul>
                 <li>Develop new user-facing features</li>
 
